metadata: add a bit more info to the tab

--- a/main.html
+++ b/main.html
@@ -112,7 +112,11 @@ div#footer {
 </div>
 
 <div class='main' id='main.metadata' style='display: none'>
-<div id='metadata'></div>
+<span id='metadata.artist'></span> -
+<span id='metadata.album'></span> -
+<span id='metadata.title'></span><br>
+<span id='metadata.date'></span><br><br>
+<span id='metadata.file'></span>
 </div>
 
 </div>
