controls: swap play/stop buttons to match classic winamp layout

--- a/main.html
+++ b/main.html
@@ -67,11 +67,11 @@ div#footer {
 
 <div class='main' id='main.controls'>
 <table>
- <tr>
+ <tr style='whitespace:collapse'>
   <td>
-   <input type='button' id='previous' value='&#x21E6;'><input type='button' id='stop' value='&#x25FB;'><input type='button' id='pause' value='&#x25EB;'><input type='button' id='play' value='&#x25B7;'><input type='button' id='next' value='&#x21E8;'>
+   <input type='button' id='previous' value='&#x21E6;'><input type='button' id='play' value='&#x25B7;'><input type='button' id='pause' value='&#x25EB;'><input type='button' id='stop' value='&#x25FB;'><input type='button' id='next' value='&#x21E8;'>
   </td>
-  <td style='whitespace:collapse'>
+  <td>
    <input type='button' id='repeat' value='&#x221E;'><input type='button' id='random' value='&reg;'><input type='button' id='single' value='&sect;'><input type='button' id='consume' value='&copy;'>
   </td>
  </tr>
