--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@ div#footer {
 <table>
  <tr style='whitespace:collapse'>
   <td>
-   <input type='button' id='previous' value='&#x21E6;'><input type='button' id='play' value='&#x25B7;'><input type='button' id='pause' value='&#x25EB;'><input type='button' id='stop' value='&#x25FB;'><input type='button' id='next' value='&#x21E8;'>
+   <input type='button' id='previous' value='&#x21E6;' accesskey='a'><input type='button' id='play' value='&#x25B7;' accesskey='s'><input type='button' id='pause' value='&#x25EB;' accesskey='d'><input type='button' id='stop' value='&#x25FB;' accesskey='f'><input type='button' id='next' value='&#x21E8;' accesskey='g'>
   </td>
   <td>
    <input type='button' id='repeat' value='&#x221E;'><input type='button' id='random' value='&reg;'><input type='button' id='single' value='&sect;'><input type='button' id='consume' value='&copy;'>
