playlist: fix display, and let people delete items

--- a/main.html
+++ b/main.html
@@ -36,9 +36,16 @@ table.tabs td.selected {
 	background-color: white;
 }
 
+/* Playlist styles */
 table#playlist td {
 	border-left: black solid 1px;
 	padding-right: 0.5em;
+}
+
+td#playlist_del {
+	padding-left: 0.3em;
+	padding-right: 0.2em;
+	font-weight: bold;
 }
 
 /* Get the tabs to float at the bottom */
@@ -58,6 +65,10 @@ div#footer {
 	height: 1.3em;
 	clear: both;
 }
+table#playlist {
+	height: 85px;
+	display: block;
+};
 </style>
 </head>
 
